Description : modification chart layout Bug ID: NA Reviewed By: Sanjay

--- a/trunk/technical/src/apps/user/patientcare/src/app/modules/patient-management/charts/charts.component.css
+++ b/trunk/technical/src/apps/user/patientcare/src/app/modules/patient-management/charts/charts.component.css
@@ -1,16 +1,3 @@
-.charts {}
-
-.card-layout {
-    padding: 12;
-}
-
-.card-layout .h1 {
-    margin-bottom: 15;
-}
-
-.lextra-container {
-    position: relative;
-}
 
 .cardeffect {
     width: 95%;
@@ -24,7 +11,7 @@
     /* padding-left: 5; */
     padding-right: 5;
     /* border-radius: 5px; */
-
+    padding-bottom: 8%;
 }
 
 .labelName {
@@ -56,17 +43,16 @@
 .float-btn-cat-text {
     color: #ffffff;
     font-size: 17;
-    color: rgba(255,255,255,1);
+    color: rgba(255, 255, 255, 1);
     /* opacity: 1; */
     /* background-color: red;
     padding: 5; */
 }
 
-
 .float-btn-cat {
     background-color: #396766;
     /* border-radius: 3px; */
-    border-radius:22;
+    border-radius: 22;
     width: 44;
     height: 44;
     text-align: center;
@@ -74,9 +60,12 @@
 }
 
 .category-header {
-    background-color: #00A6CE;
+    background-color: #ffffff;
+}
+
+.nameLabel {
     padding: 15;
-    color: #ffffff;
+    color: #396766;
     font-weight: bold;
 }
 
@@ -91,103 +80,31 @@
 
 /* selected css end */
 
-/* swipe action animated swipe css start */
-
-.markViewStackLayout {
-    background-color: blue;
-    padding: 16
-}
-
-.deleteViewStackLayout {
-    background-color: red;
-    padding: 16;
-}
-
-.gridLayoutLayout {
-    background-color: white;
-}
-
-.markViewStackLayout {
-    background-color: blue;
-    padding-left: 16;
-    padding-right: 16;
-}
-
-.swipeTemplateLabel {
-    size: 20;
-}
-
-.deleteViewStackLayout {
-    background-color: red;
-    padding-left: 16;
-    padding-right: 16;
-}
-
-/* swipe action animated swipe css end */
-
-/* grouping title color change css  start*/
-
-.groupLabelIntake {
-    /* background-color: #00A6CE; */
-    padding: 15;
-    color: #ffffff;
-    font-weight: bold;
-}
-
-.groupLabelMonitor {
-    /* background-color: #396766; */
-    padding: 15;
-    color: #ffffff;
-    font-weight: bold;
-}
-
-.groupLabelMedicine {
-    /* background-color: #396766; */
-    padding: 15;
-    color: #ffffff;
-    font-weight: bold;
-}
-
-.groupLabelOutput {
-    /* background-color: #396766; */
-    padding: 15;
-    color: #ffffff;
-    font-weight: bold;
-}
-
-/* grouping title color change css  start*/
-
 .button-clicked {
     color: #FF8910;
 }
 
-.example-class {
-    color: red;
-}
-
-.other-class {
-    color: green;
-}
-
 .hr-lightt {
     display: block;
-    /* height: 1px; */
-    /* border: 0px; */
     border-top: 1px solid #396766;
     margin: 0 0;
     padding: 3px 0px;
 }
+
 .float-btn-container {
     margin-top: 10%
     /* margin-left: 80%; */
 }
 
 .fab-button {
-	height: 70;
-	/* width: 70; */
-	margin: 15;
-	background-color: #ff4081;
-	horizontal-align: right;
-	vertical-align: bottom;
+    height: 70;
+    /* width: 70; */
+    margin: 15;
+    background-color: #ff4081;
+    horizontal-align: right;
+    vertical-align: bottom;
 }
 
+.list-layout {
+    padding: 10% 7px;
+}
